--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head> 
-        <title>Conservation</title> <link rel="stylesheet" href="style.css" type="text/css"> 
+        <title>Dovrefjell</title> <link rel="stylesheet" href="style.css" type="text/css"> 
     </head> 
     <body> 
         <div class="heading"> 
@@ -10,6 +10,6 @@
             <button class="conservation">
             <a class="button" href="index2.html">MAIN</a>
             </button>
-        </div> 
+        </div>
     </body>
 </html>
