--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,20 @@
 <body>
 	<div class="container">
 		<div class="sidebar">
-			<h4 class="sitename"><a href="index2.html">Conservation</a></h4>
+			<h4 class="sitename"><a href="index.html">Conservation</a></h4>
 			<ul>
 				<li><a href="index2.html"><i class="fa fa-home"></i>&nbsp;&nbsp;Main</a></li>
 				<li><a href="about.html"><i class="fa fa-question-circle"></i>&nbsp;&nbsp;About</a></li>
 				<li><a href="access.html"><i class="fa fa-car"></i>&nbsp;&nbsp;Where</a></li>
-				<li class="active"><a href="contact.html"><i class="fa fa-envelope"></i>&nbsp;&nbsp;Conservation</a></li>
+				<li class="active"><a href="contact.html"><i class="fa fa-envelope">
+                    </i>&nbsp;&nbsp;Conservation</a></li>
+			</ul>
+		</div>
+        <div class="main">
+        <div class="content">
+        <h1>Conservation</h1>
+        <br>
+        <p>In the Dovrefjell they protected the rare plants, animals such as Muskox. I have heard that around only 300 Muskox´s live in Norway and that they only live in Dovrefjell. There are also more of them in Greenland and Sweden. It´s good that in Dovrefjell you need to walk or hike, it helps the world and it will not hurt the plants with the gas from the cars or toxic fumes released by power plants. Its very safe and such a beautiful National Park.</p>
+            
+            </div>
+        </div>
