--- a/index2.html
+++ b/index2.html
@@ -19,15 +19,15 @@
 		</div>
 		<div class="main">
 			<div class="content">
-				<h1>Dovrefjell</h1>
+				<h1>Welcome</h1>
 				<br>
-				<p>Conservation</p>
-				<br>
-				<h2></h2>
-				<h3></h3>
-				<h4></h4>
-				<h5></h5>
-				<h6></h6>
+				<p>This website is made by Adrian Lona and explains about Dovrefjell, it´s location and how it is conserved. It is a very safe trip in Dovrefjell.</p>
+                <br>
+                <p>Sources</p>
+                <p>“Dovrefjell.” Wikipedia, Wikimedia Foundation, 20 Oct. 2017, en.wikipedia.org/wiki/Dovrefjell.
+                https://en.wikipedia.org/wiki/Dovrefjell</p>
+				<img src="dovre.jpg">
+                <img src=dovrenational.jpg>
 			</div>
 		</div>
 	</div>
